c端修改message组件  新增mine模块
